# sdl3-synth

./: .gitignore  CMakeLists.txt  CMakePresets.json  Filter.cpp  Filter.h  LICENSE.txt  Makefile  Melody.cpp  Melody.h  Oscillator.cpp  Oscillator.h  Preset.cpp  Preset.h  README.md  SineTable.cpp  SineTable.h  Synthesizer.cpp  Synthesizer.h  Utils.cpp  Utils.h  Voice.cpp  Voice.h  index.html  main.cpp  pre.js
